--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.5.0",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "firebase": "^10.13.1",
